--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -3,7 +3,7 @@
     width:100%;
     height: 160px;
 }
-.jumbotron h1,h3 {
+.jumbotron2 h1,h3 {
     color: #F5F5DC;
     text-align: center;
     padding-top: 30px;
