--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -3,11 +3,8 @@
     width:100%;
     height: 160px;
 }
-.jumbotron2 h1,h3 {
+.jumbotron h1,h3 {
     color: #F5F5DC;
     text-align: center;
     padding-top: 30px;
-}
-.rocks p, td {
-font-family: Arial, Helvetica, sans-serif
 }
